Update and rename Untitled1_old.ipynb to Untitled1.ipynb

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "8e40884b-e05d-4057-a0f6-d2e8e2b1af30",
    "metadata": {
     "editable": true,
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0d0ac9c136a47e0b0eb14fab275ea9b",
+       "model_id": "c7693bb14dc945ef9aa0127cb55fecf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,6 +37,8 @@
     "from IPython.display import display, clear_output\n",
     "from io import StringIO\n",
     "import os\n",
+    "import numbers\n",
+    "import math\n",
     "\n",
     "# --- Shared State ---\n",
     "data = []\n",
@@ -67,7 +69,7 @@
     "        parsing(content)  \n",
     "        draw_graph(range_slider.value)\n",
     "    \n",
-    "        print(sled_name)\n",
+    "#        print(sled_name)\n",
     "#        for line in content:\n",
     "#            print(line)\n",
     "\n",
@@ -167,19 +169,26 @@
     "    df = []\n",
     "    \n",
     "    df = pd.DataFrame(data)\n",
-    "    for col in ['Time', 'Voltage', 'Position', 'Section', 'Velocity', 'BT_Members', 'Brake_Power']:\n",
-    "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
     "\n",
+    "    for col in ['Time', 'Voltage', 'Position', 'Section', 'Velocity', 'BT_Members', 'Brake_Power']:\n",
+    "        df[col] = pd.to_numeric(df[col], errors='coerce')    \n",
+    "    \n",
     "    df = df.sort_values(by='Time').dropna(subset=['Time'])\n",
     "    df = df.groupby('Time', as_index=False).first()\n",
-    "    \n",
-    "    df = preprocess_data(bin_slider.value)\n",
-    "    \n",
-    "    df = df.dropna(subset=['Voltage', 'Position', 'Section', 'Velocity', 'BT_Members', 'Brake_Power'], how='all').reset_index(drop=True)\n",
     "\n",
+    "    fill_list()\n",
+    "    \n",
+    "#    df = preprocess_data(bin_slider.value)\n",
+    "    \n",
+    "#    df = df.dropna(subset=['Voltage', 'Position', 'Section', 'Velocity', 'BT_Members', 'Brake_Power'], how='all').reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "    \n",
     "    pd.set_option('display.max_rows', None)\n",
     "    pd.set_option('display.max_columns', None)\n",
     "    pd.set_option('display.max_colwidth', None)  \n",
+    "\n",
+    "    \n",
     "\n",
     "def preprocess_data(bin_size):\n",
     "    df_local = []\n",
@@ -205,17 +214,18 @@
     "\n",
     "    range_slider.max = ((df['Time'].max() + 100) // 100) * 100\n",
     "    range_slider.value = 0, ((df['Time'].max() + 100) // 100) * 100\n",
-    "    print(((df['Time'].max() + 100) // 100) * 100)\n",
+    "#    print(((df['Time'].max() + 100) // 100) * 100)\n",
     "\n",
     "    range_slider_2.max = ((df['Position'].max() + 100) // 100) * 100\n",
     "    range_slider_2.value = 0, ((df['Position'].max() + 100) //100) * 100\n",
-    "    print(((df['Position'].max() + 100) // 100) * 100)\n",
+    "#    print(((df['Position'].max() + 100) // 100) * 100)\n",
     "\n",
     "    bin_slider.value = 0.1\n",
     "                    \n",
     "def draw_graph(change):\n",
     "    with graph_1:\n",
-    "        df = preprocess_data(bin_slider.value)\n",
+    "\n",
+    "#        df = preprocess_data(bin_slider.value)\n",
     "        \n",
     "        clear_output(wait=True)\n",
     "        my_min, my_max = range_slider.value\n",
@@ -317,7 +327,7 @@
     "        \n",
     "    with graph_2:\n",
     "        \n",
-    "        df = preprocess_data(bin_slider.value)\n",
+    "#        df = preprocess_data(bin_slider.value)\n",
     "\n",
     "        clear_output(wait=True)\n",
     "        fig, ax1 = plt.subplots(figsize=(25, 5))\n",
@@ -404,7 +414,7 @@
     "\n",
     "    data = []\n",
     "\n",
-    "    print(\"hay\")\n",
+    "#    print(\"hay\")\n",
     "#    print(df)\n",
     "\n",
     "    with graph_1:\n",
@@ -416,8 +426,42 @@
     "        plt.close()\n",
     "\n",
     "    draw_graph(change)\n",
+    "\n",
+    "\n",
+    "    \n",
     "# ----- TEST -----\n",
     "\n",
+    "def fill_list():\n",
+    "    global df\n",
+    "\n",
+    "#    print(df)\n",
+    "    for name in df:\n",
+    "#        print(name)\n",
+    "        name_old = 0\n",
+    "        n = 0\n",
+    "        if name != 'Voltage':\n",
+    "            for i in df[name]:\n",
+    "    #            print(i)\n",
+    "                if math.isnan(i):\n",
+    "                    i = name_old\n",
+    "    #                print(i)\n",
+    "                    df[name][n] = i\n",
+    "                else:\n",
+    "                    name_old = i\n",
+    "                \n",
+    "                n += 1\n",
+    "                #print(i)\n",
+    "\n",
+    "    print(df)\n",
+    "\n",
+    "def is_not_float(value):\n",
+    "    try:\n",
+    "        float(value)\n",
+    "        return False\n",
+    "    except ValueError:\n",
+    "        return True\n",
+    "\n",
+    "    \n",
     "# --- Widgets ---\n",
     "upload_widget = widgets.FileUpload(accept='.log', multiple=False)\n",
     "\n",
@@ -480,7 +524,7 @@
     "# --- layout boxes ---\n",
     "\n",
     "slider_panel = widgets.HBox(\n",
-    "    [range_slider, bin_slider, upload_widget],\n",
+    "    [range_slider, upload_widget],\n",
     "    layout = widgets.Layout(justify_content='flex-start', padding='10px 0 20px 0'))\n",
     "\n",
     "# -- Graph 1 --\n",
